[package]
name = "runeclan-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.11.4"
soup="0.5.1"
clap="3.0.0-beta.2"
tokio={version="1.9.0", features=["full"]}
futures="0.3.16"
indicatif="0.16.2"
linecount="0.1.0"